Опечатки + система счисления

--- a/main.adoc
+++ b/main.adoc
@@ -516,7 +516,10 @@ void _start() {
 ....
 
 Если выполнить компиляцию и дезассемблирование данной программы, то получится следующий
-результат:
+результат.
+
+NOTE: Заметим, что адреса и коды команд приведены в шестнадцатиричной системе счисления.
+
 ....
 80000000 <_start>:
 80000000:	00200a13          	addi	x20,x0,2
@@ -543,7 +546,7 @@ void _start() {
 <1> -- Видно, что команда `la x1, _x` превращается в 2 команды: `auipc` и `addi`.
 Первая из них используется для формирования значения в старшей части регистра `x1`.
 После её выполнения в `x1` запишется значение 0x80000004 (адрес команды `auipc`).
-После выполнения команды `addi`, регистр `x1` станет равен `0x80000004 + 60 = 80000040`,
+После выполнения команды `addi`, регистр `x1` станет равен `0x80000004 + 60 = 0x80000040`,
 то есть адресу нулевого элемента массива `_x`.
 
 == Микроархитектура
@@ -732,7 +735,7 @@ NOTE: Заметим, что память адресуется в RISC-V в ба
 
 [cols="8*m"]
 |======================
-.2+|Адрес    .2+|Код команды .2+|Команда .2+|id  4+|Такты
+.2+|Адрес (hex)    .2+|Код команды (hex) .2+|Команда .2+|id  4+|Такты
                                             |1  |2  |3  |4
 |80000000       |00200a13  |addi x20,x0,2   |0     |F  |ID |   |
 |80000004       |00000097  |auipc x1,0x0    |1     |   |F  |ID |
@@ -847,7 +850,7 @@ image::d.png[]
 
 [cols="3*4m, 7*1m"]
 |======================
-.2+|Адрес    .2+|Код команды .2+|Команда .2+|id  6+|Такты
+.2+|Адрес (hex)   .2+|Код команды (hex) .2+|Команда .2+|id  6+|Такты
                                             |1  |2  |3  |4  |5  |6
 |80000000       |00200a13  |addi x20,x0,2   |0     |F  |ID |D  |   |   |
 |80000004       |00000097  |auipc x1,0x0    |1     |   |F  |ID |D  |   |
@@ -885,7 +888,7 @@ image::d_conflict.png[]
 
 [cols="3*4m, 11*1m"]
 |======================
-.2+|Адрес    .2+|Код команды .2+|Команда .2+|id  10+|Такты
+.2+|Адрес (hex)   .2+|Код команды (hex) .2+|Команда .2+|id  10+|Такты
                                         |1  |2  |3  |4  |5  |6  |7  |8 |9 |10
 |80000000       |00200a13  |addi x20,x0,2      |0     |F  |ID |D  |   |   |   |   |  |  |
 |80000004       |00000097  |auipc x1,0x0      |1     |   |F  |ID |D  |   |   |   |  |  |
@@ -1014,7 +1017,7 @@ NOTE: Мы рассматриваем конфигурацию в которой
 [.small]
 [cols="4*20m, 60*1m"]
 |=================================
-.2+h|Адрес .2+h|Код операции .2+h|Команда .2+h|id 60+h|Номер такта
+.2+h|Адрес (hex) .2+h|Код команды (hex) .2+h|Команда .2+h|id 60+h|Номер такта
                                         h|1 h|2 h|3 h|4 h|5 h|6 h|7 h|8 h|9 h|10 h|11 h|12 h|13 h|14 h|15 h|16 h|17 h|18 h|19 h|20 h|21 h|22 h|23 h|24 h|25 h|26 h|27 h|28 h|29 h|30 h|31 h|32 h|33 h|34 h|35 h|36 h|37 h|38 h|39 h|40 h|41 h|42 h|43 h|44 h|45 h|46 h|47 h|48 h|49 h|50 h|51 h|52 h|53 h|54 h|55 h|56 h|57 h|58 h|59 h|60
 |80000000 <_start>|00200a13|addi x20,x0,2|0|F|ID|D|AL||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 |80000004|00000097|auipc x1,0x0|1||F|ID|D|AL|||||||||||||||||||||||||||||||||||||||||||||||||||||||
@@ -1080,7 +1083,7 @@ NOTE: Мы рассматриваем конфигурацию в которой
 . Открыть проект в среде Intel Quartus.
 . Запустить симуляцию в среде Modelsim. Для этого выбрать в меню Quartus пункт
 Tools -> Run Simulation Tool -> RTL Simulation.
-. Запустить симуляцию, набрав в командной строке Modelsim команду `run460us`.
+. Запустить симуляцию, набрав в командной строке Modelsim команду `run 460us`.
 . Изучить список сигналов, приведенных в окне Wave.
 . Создать директорию для хранения текста программы и необходимых файлов.
 . Поместить туда Makefile, файл `link.ld` и текст прграммы по индивидуальному варианту.
