Исправил двусмыссленную фразу в п. 6 АЛУ

--- a/main.adoc
+++ b/main.adoc
@@ -968,7 +968,8 @@ NOTE: Мы рассматриваем конфигурацию в которой
 . Регистровый файл выдает содержимое исходных регистров команды;
 . АЛУ выполняет требуемую операцию и выдает результат в регистровый файл через сигнал `unit_wb[0].rd`,
 одновременно выдавая сигналы `unit_wb[0].done` и `unit_wb[0].id`;
-. Блок метаинформации выдает номер регистра назначения команды с идентификатором `unit_wb[0].id`;
+. Блок управления метаинформацией выдает номер регистра назначения команды,
+идентификатор которой содержится в `unit_wb[0].id`;
 . По фронту `clk` происходит запись в регистровый файл.
 
 Все вышеперечисленные действия происходят комбинационно в течение одного такта.
