1 команда/сек -> 1 команда/clk

--- a/main.adoc
+++ b/main.adoc
@@ -1010,7 +1010,7 @@ NOTE: Мы рассматриваем конфигурацию в которой
 
 *Заметим*, что несмотря на задержку в 3 такта, блок имеет возможность принимать на выполнение
 команды доступа к памяти *каждый* такт. Таким образом, его пропускная способность (*throughput*)
-составляет 1 команду/сек, хотя задержка и равна 3 тактам.
+составляет 1 команду/clk, хотя задержка и равна 3 тактам.
 
 ==== Блок ветвлений
 ==== Пример трассы выполнения тестовой программы
