--- a/main.adoc
+++ b/main.adoc
@@ -1013,6 +1013,8 @@ NOTE: Мы рассматриваем конфигурацию в которой
 составляет 1 команду/clk, хотя задержка и равна 3 тактам.
 
 ==== Блок ветвлений
+
+
 ==== Пример трассы выполнения тестовой программы
 Продолжая рассуждения, начатые в примерах 1,2 и 3 иожно получить полную трассу выполнения программы.
 [.small]
@@ -1110,8 +1112,15 @@ $ git clone https://gitlab.com/sibragimov/riscv-lab.git
 содержащий шестнадцатеричное представление программы, а в окне терминала отобразился
 дизассемблерный листинг. Сравнить дизассемблерный листинг с тем, который приведен в примере.
 . Открыть проект `riscv-lab/taiga/taiga.qpf` в среде Intel Quartus.
+. Выполнить синтез проекта выбрав пункт меню Processing -> Start Compilation.
 . Запустить симуляцию в среде Modelsim. Для этого выбрать в меню Quartus пункт
 Tools -> Run Simulation Tool -> RTL Simulation.
++
+NOTE: Если при запуске симуляции возникнет сообщение об ошибке, вызванной тем,
+что путь к симулятору не указан, необходимо открыть окно настроек Tools -> Options.
+В левой части окна найти пункт EDA Tool Options. В текстовом поле напротив пункта
+`ModelSim-Altera` ввести путь к каталогу с установленным симулятором: `C:\altera\13.0sp1\modelsim_ase`.
+
 . Запустить симуляцию, набрав в командной строке Modelsim команду `run 460us`.
 . Изучить список сигналов, приведенных в окне Wave.
 . Создать файл, содержащий текст прграммы по индивидуальному варианту. Поместить его
