Добавлено описание развертывания рабочей среды

--- a/main.adoc
+++ b/main.adoc
@@ -25,6 +25,43 @@ Taiga (https://gitlab.com/sfu-rcl/Taiga, авторы - Eric Matthews,  Lesley S
 
 Для работы с проектом используется САПР Intel Quartus.
 
+=== Подготовка рабочего окружения
+Для выполнения лабораторной работы предлагается использовать терминальный сервер,
+доступный из МГТУ им. Н. Э. Баумана, на котором установлено и настроено все требуемое ПО.
+
+IMPORTANT: В случае использования терминального сервера не требуется ничего устанавливать
+на ПК, с которого осуществляется работа.
+
+Параметры доступа к терминальному серверу:
+[horizontal]
+ip-адрес :: `195.19.33.62`
+имя пользователя :: `user00` .. `user99`
+пароль :: совпадает с именем пользователя
+
+Для доступа к терминальному серверу из Linux можно воспользоваться следующей командой:
+
+....
+$ rdesktop 195.19.33.62 -uuser15 -puser15 -g1366x716 -r disk:z=<путь>
+....
+где вместо `<путь>` требуется указать путь к локальному каталогу, который будет
+экспортирован на сервер в качестве диска `Z:` на время сеанса удаленной работы.
+
+.Развертывание рабочего окружения на другом ПК
+Для развертывания рабочего окружения на любом ПК под управлением ОС Windows
+необходимо установить следующее ПО:
+
+. Intel Quartus. Установочный пакет доступен на сайте https://fpgasoftware.intel.com/?edition=lite&platform=windows после бесплатной регистрации.
+Потребуется версия не меньше 20.1. Для установки необходимо скачать и установить пакет Quartus Prime Lite Edition Software
+с вкладки Combined Files.
+. Компилятор, ассемблер, линкер и вспомогательные утилиты. Устанавливаются одним
+пакетом с помощью установщика, доступного по ссылке: https://sysprogs.com/getfile/40/risc-v-gcc7.7.1.exe
+. Bash, git и другие утилиты Unix. Устанавливаются одним
+пакетом с помощью установщика, доступного на сайте https://git-scm.com/download/win (подойдет любая версия).
+
+Установку можно проводить в любом порядке с параметрами по умолчанию.
+После установки необходимо перейти в каталог с установленным компиляторм (он выбирался на шаге 2)
+и переименовать файл `bin\make` в `bin\gmake`.
+
 == Архитектура набора команд RV32I
 
 RISC-V является открытым современным набором команд, который может использоваться для
