Дописан раздел про блок ветвлений

--- a/main.adoc
+++ b/main.adoc
@@ -1028,7 +1028,7 @@ NOTE: Мы рассматриваем конфигурацию в которой
 (сигнал `/tb/uut/cpu/load_store_unit_block/lsq/transaction_out`), что подтверждается
 сигналом `/tb/uut/cpu/load_store_unit_block/lsq/transaction_ready`. Выполняется
 дешифрирование адреса и определение вида памяти к которой происходит доступ.
-Готовность памяти данных (в нашем случае, это верно всегда, так как время доступа к памяти
+Готовность памяти данных (в нашем случае, готовность памяти имеется всегда, так как время доступа к памяти
 всегда составляется 1 такт) дает возможность сформировать запрос к памяти, то есть
 выставить на ША адрес, соответствующий характеристикам транзакции.
 Адрес формируется комбинационно. Так как блок рассчитан на работу с памятью с неизвестной заранее
@@ -1050,7 +1050,77 @@ NOTE: Мы рассматриваем конфигурацию в которой
 составляет 1 команду/clk, хотя задержка и равна 3 тактам.
 
 ==== Блок ветвлений
+Блок ветвлений выполняет команды `jal`/`jalr` и команды условного перехода
+`bXX`(`XX` - код условия). Данный блок описан в файле `core/branch_unit.sv`.
 
+Начнем рассмотрение его работы с того такта, когда на выполнение запланирована
+команда ветвления, то есть, в момент выставления сигнала `unit_issue[2].new_request`.
+В этом такте происходит проверка условия ветвления (если оно есть) и на основании
+результата проверки, текущего значения `pc` (оно доступно через поле `issue_pc`
+структуры `branch_inputs`) и смещения формируется новое значение `pc`.
+
+В начале следующего такта происходит запись сформированного нового значения
+`pc`, флага, указывающего на то, что переход выполнен и других сигналов в структуру
+`/tb/uut/cpu/branch_unit_block/br_results`. Кроме того, формируется сигнал
+`/tb/uut/cpu/branch_unit_block/branch_complete`, указывающий на завершение
+выполнения команды, `id` которой выдается через сигнал `/tb/uut/cpu/branch_unit_block/branch_id`.
+
+*Обратим внимание*, что в этом же такте формируется сигнал `/tb/uut/cpu/branch_unit_block/branch_flush`.
+Рассмотрим этот сигнал подробнее. На выходе блока декодирования в этом такте
+появляется новая команда. Если `pc` этой команды отличается от `br_results.new_pc`,
+то есть от адреса, который
+был сформирован блоком ветвлений, то устанавливается в 1 сигнал `branch_flush`.
+Для понимания процесса, который тут происходит нужно вспомнить, что следующая команда,
+которая в этом такте появилась на выходе блока декодирования была выбрана минимум 3 такта назад.
+В момент выборки этой команды команда ветвления еще не была выполнена, а значит
+адрес перехода (да и сам факт того, что впереди встретится команда парехода)
+в общем случае был неизвестен. В таких условиях блок выборки формирует адрес
+для выборки следующей команды используя *предсказатель ветвлений* (о нем -- ниже) или
+таким образом, как будто следующей будет *выполняться* та команда,
+которая *расположена* после текущей. Это верно для всех команд, кроме ветвлений.
+Поэтому в блоке ветвлений необходимо необходимо обнаруживать ситуацию *ошибочной выборки* и
+формировать сигнал `branch_flush`, указывающий то, что последующие команды
+были выбраны и декодированы ошибочно, и исполнять их нельзя.
+
+В случае ошибочной выборки (когда `branch_flush=1`) происходят следующие действия:
+. блок выборки очищает очередь запросов к памяти, таким образом, в следующем такте сигнал
+`fetch_complete` выставлен не будет, а резльтат текущей выборки будет отброшен;
+. сигнал `new_pc` в блоке выборки формируется из `br_results.new_pc`, то есть
+с использованием адреса, полученного от блока ветвлений;
+. блок управления метаинформацией очищает очередь выбранных команд;
+. блок декодирования и планирования на выполнение сбрасывает сигналы `unit_issue[i].new_request`,
+ запрещая выполнение подготовленной команды.
+
+Если же ошибочной выборки не произошло, то есть, если следующей планируется на исполнение команда,
+адрес которой совпадает с адресом перехода, то `branch_flush=0` и никакие дополнительные действия
+не выполняются, а высокий уровень сигнала `branch_complete` указывает на то, что
+команда с `id` равным `branch_id` завершила выполнение.
+
+==== Предсказатель ветвлений
+Как мы видели из предыдущего раздела ситуация ошибочной выборки крайне негативно сказывается
+на производительности, так как приводит к необходимости очистки конвеера, и ожидания
+прохождения новой команы по всем стадиям работы. Чтобы этого избежать необходимо уже
+на этапе выборки знать адрес следующей команды. Для решения этой задачи используется
+блок предсказания ветвлений, описанный в файле `core/branch_predictor.sv`. Подробное
+рассмотрение принципа его работы выходит за рамки нашего рассмотрения, отметим лишь,
+что в основе его конструкции лежит кеш-память. В эту кеш-память заносятся
+сведения об адресах команд переходов и о фактах выполнения/невыполнения этих переходов.
+В Taiga используется простой принцип предсказания ветвлений: если при исполнении команды по
+некоторому адресу произошел переход, то скорее всего этот преход произойдет и в следующий раз
+при исполнении команды с этого адреса.
+
+На вход блока предсказания ветвлений подаются сигналы с выхода блока ветвлений (`br_results`),
+содержащих информацию об адресах инструкций ветвлений. Кроме того, на вход блока
+предсказания ветвлений подается сигнал `new_pc` блока выборки. В каждом такте
+блок предсказания ветвлений формирует сигналы `/tb/uut/cpu/bp/use_prediction` и
+`/tb/uut/cpu/bp/predicted_pc`. Если `/tb/uut/cpu/bp/predicted_pc=1`, то ожидается,
+что по адресу `new_pc`, сформированном в предыдущем такте, находится команда ветвления,
+которое произойдет на адрес `/tb/uut/cpu/bp/predicted_pc`. Блок выборки реагируя
+на этой факт в качестве `new_pc` для следующего такта выберет адрес, содержащийся
+в `/tb/uut/cpu/bp/predicted_pc`. Таким образом, вслед за выборкой предположительной команды
+ветвления произойдет выборка команды, которая будет выполняться после перехода.
+Благодаря этому не произойдет ошибочной загрузки и не потребуется очистка
+конвеера.
 
 ==== Пример трассы выполнения тестовой программы
 Продолжая рассуждения, начатые в примерах 1,2 и 3 иожно получить полную трассу выполнения программы.
