Добавлены примеры ветвлений

--- a/main.adoc
+++ b/main.adoc
@@ -1034,7 +1034,7 @@ image::img/d_conflict.png[]
 Где:
 [horizontal]
 F :: Такт, в котором происходит операция выборки;
-ID :: Такт, в котором происходит операция диспетчеризации;cels
+ID :: Такт, в котором происходит операция диспетчеризации;
 D  :: Такт, в котором происходит операция декодирования;
 С  :: Такт, в котором команда не выполняется из-за конфликта;
 W   :: Такт, в котором не происходит декодирования команды из-за загрузки блока декодирования.
@@ -1252,8 +1252,102 @@ IMPORTANT: Если в текущем такте сигнал `branch_complete` 
 Благодаря этому не произойдет ошибочной загрузки и не потребуется очистка
 конвеера.
 
+===== Пример выполнения команды условного перехода в случае ошибочного предсказания ветвления
+Рассмотрим выполнение команды `bne	x20,x0,8000000c`, расположенной по адресу `0x80000034`, тестового примера
+во время выполнения первой итерации цикла.
+[[branch_misspredict]]
+.Пример выполнения команды безусловного перехода в случае ошибочного предсказания ветвления
+image::img/branch_misspredict.png[]
+
+Начнем рассмтрение с такта 25, в котором команда планируется на выполнение. Конфликт отсутсвует,
+что подтверждается сигналом `unit_issue[2].new_request`, который означает факт планироания
+на выполнение в текущем такте (сигналы `rsX_conflict` не приведены на диаграмме для экономии места).
+
+В такте 26 выставляется сигнал `branch_taken`, означающий, что сигнал `br_results.new_pc`
+содержит адрес для перехода. В данном такте на выходе блока декодирования появляются
+данные следующей выбраной команды, а именно команды, расположенной по адресу `0x80000038`.
+Данная команда расположена сразу после команды условного перехода. Во время первой итерации цикла, в момент выборки команды
+по адресу `0x80000034` еще не было известно, что это команда условного перехода, и чо в данном такте эта команда
+выполнится, поэтому блок выборки выбрал в следующем такте команду по адресу `0x80000038`.
+
+В такте 26 обнаруживается несоответсвие между адресом `issue.pc=0x80000038` следующей команды и
+тем адресом, на который должен быть выполнен переход, а именно `br_results.new_pc=0x8000000c`.
+Это является причиной выставления в этом такте сигнала `branch_flush` и сигнала `gc_fetch_flush` который формируется
+комбинационно из сигнала `branch_flush`. Появление данного сигнала приводит к очистке конвеера.
+Видно, что в такте 26 команда не была запланирована на выполнение (все
+сигналы `unit_issue[i].new_request, i=0..2` равны 0). Кроме того, в конце этого такта устанавливается в 0
+сигнал `decode.valid`. Сигнал `next_pc` в такте 26 повторяет сигнал `br_results.new_pc`.
+Кроме того в данном такте значение сигнала `pc_id_next` приравнивается к значению `decode.id=7` -- идентификатору
+последней декодированной команды. Именно такой `id` получит первая команда, выбранная после перехода.
+
+В такте 27 сигнал `pc` становится равным адресу перехода, а сигнал `fetch_complete` сбрасывается в 0,
+что означает, что результаты выборки команды по адресу `0x80000050`
+(который был завершен в прошлом такте) должен быть отброшен. Команда по новому адресу
+проходит стадию выборки в такте 27, диспетчеризации -- в такте 28, декодирования -- в такте 29, и
+в такте 30 она планируется для выполнения.
+
+Таким образом, вместо такта 26, в котором следующая команда была бы запланирована на выполнение в идеальном случае,
+она была запланирована на выполнение только в такте 30. Потери времени, случившиеся из-за ошибочной выборки составили 4 такта,
+что равно длине конвеера.
+
+Обозначим на трассе выполнения данную ситуацию. На фрагменте трассы, приведенном ниже
+знаком '*' обозначены те моменты времени, которые не видны на текущей диаграмме.
+
+[cols="3*4m, 18*1m"]
+|======================
+.2+|Адрес (hex) .2+|Код команды (hex) .2+|Команда          .2+|id 17+|Такты
+                                                                     |15 |16  |17 |18 |19 |20 |21 |22 |23 |24 |25 |26 |27 |28 |29 |30 |31
+|80000034          |fc0a1ce3             |bne x20,x0,8000000c |5     |F* |ID* |W* |W* |W* |W* |W* |W  |W  |D  |B  |   |   |   |   |   |
+|80000038          |001f8f93             |addi x31,x31,1      |6     |   |F*  |ID*|W* |W* |W* |W* |W  |W  |W  |D  |X  |   |   |   |   |
+|8000003c          |0000006f             |jal x0,8000003c     |7     |   |    |   |   |F* |ID*|W* |W  |W  |W  |W  |DX |   |   |   |   |
+|80000040          |00000001             |<invalid command>   |0     |   |    |   |   |   |F* |ID*|W  |W  |W  |W  |X  |   |   |   |   |
+|80000044          |00000002             |<invalid command>   |1     |   |    |   |   |   |   |   |   |F  |ID |W  |X  |   |   |   |   |
+|80000048          |00000003             |<invalid command>   |2     |   |    |   |   |   |   |   |   |   |F  |ID |X  |   |   |   |   |
+|8000004c          |00000004             |<invalid command>   |3     |   |    |   |   |   |   |   |   |   |   |F  |X  |   |   |   |   |
+|80000050          |00000005             |<invalid command>   |4     |   |    |   |   |   |   |   |   |   |   |   |FX |   |   |   |   |
+|8000000c<loop>    |0000a103             |lw x2,0(x1)         |2     |   |    |   |   |   |   |   |   |   |   |   |   |F  |ID |D  |M1 |M2*
+|======================
+
+Где:
+[horizontal]
+F :: Такт, в котором происходит операция выборки;
+ID :: Такт, в котором происходит операция диспетчеризации;
+D  :: Такт, в котором происходит операция декодирования;
+С  :: Такт, в котором команда не выполняется из-за конфликта;
+W   :: Такт, в котором не происходит декодирования команды из-за загрузки блока декодирования;
+X   :: Такт, в котором происходит сброс команд, находящихся в очереди;
+DX   :: Такт, в котором декодирование команды происходит, но его результаты отбрасываются;
+DX   :: Такт, в котором выборка команды происходит, но его результаты отбрасываются.
+
+===== Пример выполнения команды условного перехода в случае правильного предсказания ветвления
+Изменим теперь тестовый пример так, чтобы цикл выполнился 3 раза. Для этого вместо команды
+`addi	x20,x0,2` напишем `addi	x20,x0,3`. И рассмотрим выполнение той же команды
+`bne	x20,x0,8000000c`, расположенной по адресу `0x80000034`, во время выполнения *второй*
+итерации цикла.
+[[branch_predict]]
+.Пример выполнения команды безусловного перехода в случае правильного предсказания ветвления
+image::img/branch_predict.png[]
+
+Из диаграммы видно, что в такте 37 `pc=0x80000038`. В этом такте формируется сигнал `use_prediction`,
+указывающий, что сигнал `predicted_pc` содержит значение вероятного адреса следующей команды, а именно
+`0x8000000c`. Именно этот адрес записывается в сигнал `next_pc`, а в следующем такте -- в `pc`.
+Именно по этому адресу происходит выборка следующей команды в такте 39. Важно отметить, что
+пауза в загрузке (сигнал `fetch_complete=0` в такте 38) не связана с ветвлением. Ее причина -- отсутсвие свободных мест
+в очереди команд, что видно из того факта, что сигнал `pc_id_available` был равен 0 в такте 37. В связи с этим
+в такте 37 не могла быть произведена выборка.
+
+В такте 40 происходит диспетчеризация данной команды с `id=2`.
+
+Далее видно, что интересующая нас команда ветвления запланирована на выполнение в такте 48,
+сигналы `branch_complete` и `branch_taken` сформированы в такте 49. Однако, в этом же такте планируется
+на выполнение команды по адресу `0x8000000c`, которая была выбрана в такте 39. Ее адрес совпадает с
+адресом перехода (`br_results.new_pc=0x8000000c`), поэтому сигнал `branch_flush` не формируется,
+и следующая команда начинает выполняться уже в такте 49, что подтверждается сигналом `unit_issue[1].new_request`.
+
+Таким образом, правильне предсказание ветвлений существенно повышает произодительность.
+
 ==== Пример трассы выполнения тестовой программы
-Продолжая рассуждения, начатые в примерах 1,2 и 3 иожно получить полную трассу выполнения программы.
+Продолжая рассуждения, начатые в приведенных выше примерах можно получить полную трассу выполнения программы.
 [.small]
 [cols="4*20m, 60*1m"]
 |=================================
