--- a/main.adoc
+++ b/main.adoc
@@ -645,7 +645,38 @@ $ git clone https://gitlab.com/sibragimov/riscv-lab.git
 в 1 такт. Таким образом, в нашей системе не будут возникать задержки доступа к памяти,
 в связи с чем отпадает необходимость в кэш-памяти.
 
-Рассмотрим последовательно этапы работы *вычислительного конвеера* Taiga в том порядке,
+Taiga является *конвеерным* микропроцессором с элементами суперскалярности. При
+конвеерной организации микропроцессора различные команды одновременно проходят различные
+стадии своей обработки. Конвеер Taiga насчитывает 4 стадии.
+В скобках приведены сокращенные обозначения стадий.
+
+. Выборка(F). Стадия, на которой команда извлекается из ПК. Выполняется в блоке выборки;
+. Диспетчеризация (ID). Стадия, на которой происходит запись команды в очередь команд
+для декодирования. Вполняется в блоке управления метаданными;
+. Декодирование и планироание на выполнение (D). Стадия на которой происходит определение типа и
+полей команды и определение вычислительного блока, способного ее исполнить. Выполняется
+в блоке декодирования и планирования на выполнение;
+. Выполнение (AL, M1..M3, в зависимости от исполнительного блока). Стадия, на которой команда передается в блок выполнения.
+
+Каждый из этапов конвеера, кроме этапа выполнения при соблюдении некоторых
+условий, проходит в каждый такт только одна команда. В лучшем случае, каждая стадия конвеера (кроме выполнения)
+выполняется за один такт.
+
+В состав рассматриваемой конфигурации Taiga входит 3 блока выполнения команд:
+арифметико-логическое устройство (АЛУ), блок доступа к памяти (LSU) и блок ветвлений.
+АЛУ и блок ветвлений выполняют команды за 1 такт, LSU -- минимум за 3. Таким образом,
+возможна ситуация когда команда обращения к памяти выполняется одновременно с арифметической командой.
+
+Ниже показана упрощенная и укрупненная структурная схема ядра Taiga.
+
+[[taiga_pipeline]]
+.Структурная схема ядра Taiga
+image::img/taiga_pipeline.png[]
+
+На рисунке показаны основные блоки, из которых состоит ядро Taiga: блоки, выполняющие
+стадии работы конвеера, исполнительные блоки, память команд и данных.
+
+Рассмотрим последовательно этапы работы вычислительного конвеера Taiga в том порядке,
 в котором их проходит любая команда в процессе своего выполнения. Рассмотрение этапов работы
 удобнее начать с выполнения первой команды после снятия сигнала общесистемного сброса `ext_reset`.
 
