Исправлена команда rdesktop

--- a/main.adoc
+++ b/main.adoc
@@ -41,7 +41,7 @@ ip-адрес :: `195.19.33.62`
 Для доступа к терминальному серверу из Linux можно воспользоваться следующей командой:
 
 ....
-$ rdesktop 195.19.33.62 -uuser15 -puser15 -g1366x716 -r disk:z=<путь>
+$ rdesktop 195.19.33.62 -uuser15 -puser15 -g1366x716 -r disk:z=<путь> -k en-us
 ....
 где вместо `<путь>` требуется указать путь к локальному каталогу, который будет
 экспортирован на сервер в качестве диска `Z:` на время сеанса удаленной работы.
