--- a/main.adoc
+++ b/main.adoc
@@ -1408,59 +1408,9 @@ image::img/branch_predict.png[]
 
 ==== Пример трассы выполнения тестовой программы
 Продолжая рассуждения, начатые в приведенных выше примерах можно получить полную трассу выполнения программы.
-[.small]
-[cols="4*20m, 60*1m"]
-|=================================
-.2+h|Адрес (hex) .2+h|Код команды (hex) .2+h|Команда .2+h|id 60+h|Номер такта
-                                        h|1 h|2 h|3 h|4 h|5 h|6 h|7 h|8 h|9 h|10 h|11 h|12 h|13 h|14 h|15 h|16 h|17 h|18 h|19 h|20 h|21 h|22 h|23 h|24 h|25 h|26 h|27 h|28 h|29 h|30 h|31 h|32 h|33 h|34 h|35 h|36 h|37 h|38 h|39 h|40 h|41 h|42 h|43 h|44 h|45 h|46 h|47 h|48 h|49 h|50 h|51 h|52 h|53 h|54 h|55 h|56 h|57 h|58 h|59 h|60
-|80000000 <_start>|00200a13|addi x20,x0,2|0|F|ID|D|AL||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-|80000004|00000097|auipc x1,0x0|1||F|ID|D|AL|||||||||||||||||||||||||||||||||||||||||||||||||||||||
-|80000008|03c08093|addi x1,x1,60 #80000040<x>|2|||F|ID|D|AL||||||||||||||||||||||||||||||||||||||||||||||||||||||
-|8000000c <loop>|0000a103|lw x2,0(x1)|3||||F|ID|D|M1|M2|M3|||||||||||||||||||||||||||||||||||||||||||||||||||
-|80000010|002f8fb3|add x31,x31,x2|4|||||F|ID|D|C|C|AL||||||||||||||||||||||||||||||||||||||||||||||||||
-|80000014|0040a103|lw x2,4(x1)|5||||||F|ID|W|W|D|M1|M2|M3|||||||||||||||||||||||||||||||||||||||||||||||
-|80000018|002f8fb3|add x31,x31,x2|6|||||||F|ID|W|W|D|C|C|AL||||||||||||||||||||||||||||||||||||||||||||||
-|8000001c|0080a103|lw x2,8(x1)|7||||||||F|ID|W|W|W|W|D|M1|M2|M3|||||||||||||||||||||||||||||||||||||||||||
-|80000020|002f8fb3|add x31,x31,x2|0|||||||||F|ID|W|W|W|W|D|C|C|AL||||||||||||||||||||||||||||||||||||||||||
-|80000024|00c0a103|lw x2,12(x1)|1||||||||||F|ID|W|W|W|W|W|W|D|M1|M2|M3|||||||||||||||||||||||||||||||||||||||
-|80000028|002f8fb3|add x31,x31,x2|2|||||||||||F|ID|W|W|W|W|W|W|D|C|C|AL||||||||||||||||||||||||||||||||||||||
-|8000002c|01008093|addi x1,x1,16|3||||||||||||F|ID|W|W|W|W|W|W|D|C|C|AL|||||||||||||||||||||||||||||||||||||
-|80000030|fffa0a13|addi x20,x20,-1|4|||||||||||||F|ID|W|W|W|W|W|W|W|W|D|AL||||||||||||||||||||||||||||||||||||
-|80000034|fc0a1ce3|bne x20,x0,8000000c <loop>|5|||||||||||||||F|ID|W|W|W|W|W|W|W|D|B|||||||||||||||||||||||||||||||||||
-|80000038|001f8f93|addi x31,x31,1|6||||||||||||||||F|ID|W|W|W|W|W|W|W|D|X||||||||||||||||||||||||||||||||||
-|8000003c|0000006f|jal x0,8000003c <forever>|7|||||||||||||||||||F|ID|W|W|W|W|W|DX||||||||||||||||||||||||||||||||||
-|80000040|00000001|<invalid operation>|0||||||||||||||||||||F|ID|W|W|W|W|X||||||||||||||||||||||||||||||||||
-|80000044|00000002|<invalid operation>|1|||||||||||||||||||||||F|ID|W|X||||||||||||||||||||||||||||||||||
-|80000048|00000003|<invalid operation>|2||||||||||||||||||||||||F|ID|X||||||||||||||||||||||||||||||||||
-|8000004c|00000004|<invalid operation>|3|||||||||||||||||||||||||F|X||||||||||||||||||||||||||||||||||
-|80000050|00000005|<invalid operation>|4||||||||||||||||||||||||||FX||||||||||||||||||||||||||||||||||
-|8000000c <loop>|0000a103|lw x2,0(x1)|7|||||||||||||||||||||||||||F|ID|D|M1|M2|M3||||||||||||||||||||||||||||
-|80000010|002f8fb3|add x31,x31,x2|0||||||||||||||||||||||||||||F|ID|D|C|C|AL|||||||||||||||||||||||||||
-|80000014|0040a103|lw x2,4(x1)|1|||||||||||||||||||||||||||||F|ID|W|W|D|M1|M2|M3||||||||||||||||||||||||
-|80000018|002f8fb3|add x31,x31,x2|2||||||||||||||||||||||||||||||F|ID|W|W|D|C|C|AL|||||||||||||||||||||||
-|8000001c|0080a103|lw x2,8(x1)|3|||||||||||||||||||||||||||||||F|ID|W|W|W|W|D|M1|M2|M3||||||||||||||||||||
-|80000020|002f8fb3|add x31,x31,x2|4||||||||||||||||||||||||||||||||F|ID|W|W|W|W|D|C|C|AL|||||||||||||||||||
-|80000024|00c0a103|lw x2,12(x1)|5|||||||||||||||||||||||||||||||||F|ID|W|W|W|W|W|W|D|M1|M2|M3||||||||||||||||
-|80000028|002f8fb3|add x31,x31,x2|6||||||||||||||||||||||||||||||||||F|ID|W|W|W|W|W|W|D|C|C|AL|||||||||||||||
-|8000002c|01008093|addi x1,x1,16|7|||||||||||||||||||||||||||||||||||F|ID|W|W|W|W|W|W|D|C|C|AL||||||||||||||
-|80000030|fffa0a13|addi x20,x20,-1|0||||||||||||||||||||||||||||||||||||F|ID|W|W|W|W|W|W|W|W|D|AL|||||||||||||
-|80000034|fc0a1ce3|bne x20,x0,8000000c <loop>|1||||||||||||||||||||||||||||||||||||||F|ID|W|W|W|W|W|W|W|D|B||||||||||||
-|8000000c <forever>|0000a103|lw x2,0(x1)|2|||||||||||||||||||||||||||||||||||||||F|ID|W|W|W|W|W|W|W|D|X|||||||||||
-|80000010|002f8fb3|add x31,x31,x2|3||||||||||||||||||||||||||||||||||||||||||F|ID|W|W|W|W|W|DX|||||||||||
-|80000014|0040a103|lw x2,4(x1)|4|||||||||||||||||||||||||||||||||||||||||||F|ID|W|W|W|W|X|||||||||||
-|80000018|002f8fb3|add x31,x31,x2|5||||||||||||||||||||||||||||||||||||||||||||||F|ID|W|X|||||||||||
-|8000001c|0080a103|lw x2,8(x1)|6|||||||||||||||||||||||||||||||||||||||||||||||F|ID|X|||||||||||
-|80000020|002f8fb3|add x31,x31,x2|7||||||||||||||||||||||||||||||||||||||||||||||||F|X|||||||||||
-|80000024|00c0a103|lw x2,12(x1)|0|||||||||||||||||||||||||||||||||||||||||||||||||FX|||||||||||
-|80000038|001f8f93|addi x31,x31,1|3||||||||||||||||||||||||||||||||||||||||||||||||||F|ID|D|AL|||||||
-|8000003c|0000006f|jal x0,8000003c <forever>|4|||||||||||||||||||||||||||||||||||||||||||||||||||F|ID|D|B||||||
-|80000040|00000001|<invalid operation>|5||||||||||||||||||||||||||||||||||||||||||||||||||||F|ID|D|X|||||
-|80000044|00000002|<invalid operation>|6|||||||||||||||||||||||||||||||||||||||||||||||||||||F|ID|DX|||||
-|80000048|00000003|<invalid operation>|7||||||||||||||||||||||||||||||||||||||||||||||||||||||F|X|||||
-|8000004c|00000004|<invalid operation>|0|||||||||||||||||||||||||||||||||||||||||||||||||||||||FX|||||
-|8000003c|0000006f|jal x0,8000003c <forever>|6||||||||||||||||||||||||||||||||||||||||||||||||||||||||F|ID|D|B|
-|8000003c|0000006f|jal x0,8000003c <forever>|7|||||||||||||||||||||||||||||||||||||||||||||||||||||||||F|ID|D|B
-|=================================
+[[trace]]
+.Трасса выполнения тестовой программы
+image::img/pipeline.svg[]
 
 Из рассмотрения трассы видно, что выполнение программы до окончания команды
 `addi x31,x31,1` заняло 47 тактов (1-47). Из них, в течение 20 тактов(
